# tradinghours-python

./: .gitignore  Dockerfile  LICENSE  README.md  SERVER_USAGE.md  dev-readme.md  docker-compose.yml  map_primary_sessions_to_status.py  pyproject.toml  release_log.txt  test_and_release_readme.txt  trials.py
.github/workflows/: deploy.yml  release.yml  test_release.yml  tests.yml
old_tests/: __main__.py  test_cases.py  test_remote.py
src/tradinghours/: __init__.py  base.py  catalog.py  client.py  config.py  console.py  currency.py  dynamic_models.py  exceptions.py  market.py  models.py  remote.py  schedule.py  season.py  server.py  sources.py  store.py  structure.py  typing.py  util.py  validate.py
src/tradinghours/core/: analysis.py  data_types.py  io.py  utils.py
src/tradinghours/models/: __init__.py  base.py  currency.py  dynamic.py  market.py  schedule.py  season.py
src/tradinghours/new_store/: ingest.py  models.py
src/tradinghours/old_store/: file.py  source.py
src/tradinghours/server/: __init__.py  responses.py  server.py  util.py
src/tradinghours/store/: base.py  engine.py  file.py  ingest.py  models.py  source.py  sql.py
tests/: conftest.py  test_access.py  test_cases.py  test_client.py  test_console.py  test_currency.py  test_generate_phases.py  test_market.py  test_models.py  test_readme.py  test_remote.py  test_schedule.py  test_schedules.py  test_server.py  test_timezone.py  test_util.py  test_validate.py  trials.py  utils.py
